# noaa-storms-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dbt/: dbt_project.yml
dbt/models/core/: fact_costliest_events.sql  fact_events.sql  fact_fatalities.sql  fact_fatalities_by_month.sql  fact_fatalities_by_sex.sql  fact_fatality_type_by_event_type.sql  schema.yml
dbt/models/staging/: schema.yml  stg_noaa_fatalities.sql  stg_noaa_storms.sql
dbt/models/staging/staging/: stg_noaa_fatalities.sql  stg_noaa_storms.sql
ingestion/dags/: ingest_noaa_data.py  load_to_bigquery.py
ingestion/dags/scripts/: download_noaa_data.py  process_noaa_data.py
terraform/: main.tf  variables.tf
viz/models/: noaa_storms.view.lkml
